crates/biome_cli/tests/snapshots/main_commands_lint/fix_noop.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --fix fix.js
```

## `fix.js`

```js
(1 >= 0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
