crates/biome_cli/tests/snapshots/main_commands_lint/fix_suggested.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --fix --unsafe fix.js
```

## `fix.js`

```js
const a = 4;
console.log(a);

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
