crates/biome_cli/tests/snapshots/main_commands_lint/fs_error_infinite_symlink_expansion_to_dirs.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/lint_rome_test_infinite_symlink_expansion_to_dirs'
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - <TEMP_DIR>/lint_rome_test_infinite_symlink_expansion_to_dirs
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
