crates/biome_cli/tests/snapshots/main_commands_lint/fs_files_ignore_symlink.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
rome.json internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The configuration file rome.json is deprecated. Use biome.json instead.
  

```

```block
Fixed 4 file(s) in <TIME>
```


